--- a/css/home.css
+++ b/css/home.css
@@ -25,7 +25,7 @@
 .fv__img {
   height: 86.486%;
   width: 76.388%;
-  background-image: url(../../../../images/the-honest-company-uM-WXMr-3@2x-min.png);
+  background-image: url(../images/the-honest-company-uM-WXMr-3@2x-min.png);
   background-size: cover;
   background-position: center 0;
   position: relative;
