--- a/css/about.css
+++ b/css/about.css
@@ -27,7 +27,7 @@
 .fv__img {
   height: 86.486%;
   width: 76.388%;
-  background-image: url(../../../images/jacek-dylag-PMxT0XtQ--A-unsplash@2x-min.png);
+  background-image: url(../images/jacek-dylag-PMxT0XtQ--A-unsplash@2x-min.png);
   background-size: cover;
   background-position: center 0;
   position: relative;
