--- a/css/home.css
+++ b/css/home.css
@@ -99,7 +99,7 @@
 }
 
 .about-bg {
-  background-image: url(../../../../images/about-img@2x-min.png);
+  background-image: url(../images/about-img@2x-min.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
