--- a/css/contact.css
+++ b/css/contact.css
@@ -27,7 +27,7 @@
 .fv__img {
   height: 86.486%;
   width: 76.388%;
-  background-image: url(/images/photo-of-people-looking-on-tablet-1@2x-min.png);
+  background-image: url(../images/photo-of-people-looking-on-tablet-1@2x-min.png);
   background-size: cover;
   background-position: center 0;
   position: relative;
