--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -8,29 +8,29 @@
   }
 }
 
-.form__inner {
+.inner {
   max-width: 700px;
   margin: 0 auto;
 }
 
-.form__text {
+.text {
   line-height: 1.5;
   margin-bottom: 52px;
 }
 
 @media only screen and (max-width: 1024px) {
-  .form__text {
+  .text {
     margin-bottom: 18px;
   }
 }
 
 @media only screen and (max-width: 599px) {
-  .form__text {
+  .text {
     margin-bottom: 48px;
   }
 }
 
-.form__header {
+.header {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -42,23 +42,23 @@
   margin-bottom: 10px;
 }
 
-.form__header:first-of-type {
+.header:first-of-type {
   margin-bottom: 20px;
 }
 
-.form__title {
+.title {
   margin-right: 20px;
 }
 
-.form__title:nth-of-type(2) {
+.title:nth-of-type(2) {
   margin-bottom: 10px;
 }
 
-.form__title:nth-of-type(3) {
+.title:nth-of-type(3) {
   margin-bottom: 10px;
 }
 
-.form__mandatory {
+.mandatory {
   width: 34px;
   height: 18px;
   background-color: #333;
