--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -30,35 +30,18 @@
   }
 }
 
-.header {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.header:first-of-type {
-  margin-bottom: 20px;
-}
-
 .title {
-  margin-right: 20px;
-}
-
-.title:nth-of-type(2) {
   margin-bottom: 10px;
+  position: relative;
 }
-
-.title:nth-of-type(3) {
-  margin-bottom: 10px;
-}
-
-.mandatory {
+.title:nth-of-type(2):after,
+.title:nth-of-type(4):after,
+.title:nth-of-type(5):after,
+.title:nth-of-type(7):after {
+  content: "必須";
+  position: absolute;
+  top: -2px;
+  display: block;
   width: 34px;
   height: 18px;
   background-color: #333;
@@ -67,6 +50,36 @@
   color: #fff;
   line-height: 18px;
   text-align: center;
+}
+
+.title:nth-of-type(2):after {
+  left: 150px;
+}
+
+.title:nth-of-type(4):after {
+  left: 69px;
+}
+.title:nth-of-type(5):after {
+  left: 130px;
+}
+.title:nth-of-type(7):after {
+  left: 148px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .title:nth-of-type(2):after {
+    left: 131px;
+  }
+
+  .title:nth-of-type(4):after {
+    left: 61px;
+  }
+  .title:nth-of-type(5):after {
+    left: 115px;
+  }
+  .title:nth-of-type(7):after {
+    left: 131px;
+  }
 }
 
 .form
@@ -97,74 +110,7 @@
   border: 1px solid #333;
 }
 
-.radio {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-bottom: 42px;
-}
-
-@media only screen and (max-width: 599px) {
-  .radio {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-  }
-}
-
-.radio__item {
-  margin-right: 50px;
-}
-
-@media only screen and (max-width: 599px) {
-  .radio__item {
-    margin-bottom: 14px;
-  }
-}
-
-.radio__btn {
-  height: 20px;
-  width: 20px;
-  border: 1px solid #333;
-  margin-right: 10px;
-  vertical-align: -4px;
-}
-
-.privacy {
-  border: 1px solid #333;
-  border-radius: 2px;
-  padding: 10px;
-  height: 212px;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  overflow-y: scroll;
-  margin-bottom: 42px;
-}
-
-.privacy__title {
-  font-weight: bold;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
-.privacy__text {
-  line-height: 1.5;
-  margin-bottom: 30px;
-}
-
-.checkbox__wrapper {
+.checkbox {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -181,12 +127,12 @@
 }
 
 @media only screen and (max-width: 599px) {
-  .checkbox__wrapper p {
+  .checkbox p {
     font-size: 1.4rem;
   }
 }
 
-.checkbox__wrapper input {
+.checkbox input {
   width: 20px;
   height: 20px;
   margin-right: 10px;
@@ -194,9 +140,8 @@
 }
 
 @media only screen and (max-width: 599px) {
-  .checkbox__wrapper input {
+  .checkbox input {
     width: 16px;
     height: 16px;
   }
 }
-/*# sourceMappingURL=contact.css.map */
