--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,41 +1,3 @@
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Noto Sans JP", sans-serif;
-  color: #333;
-  font-size: 1.6rem;
-}
-
-@media only screen and (max-width: 1024px) {
-  body {
-    font-size: 1.4rem;
-  }
-}
-
-img {
-  height: auto;
-  max-width: 100%;
-}
-
-a {
-  text-decoration: none;
-}
-
-button {
-  border: none;
-  background: transparent;
-  outline: none;
-}
-
-ul {
-  list-style-type: none;
-}
-
-input,
-textarea {
-  resize: none;
-  outline: none;
-  border: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
